--- a/magtac.canvas.debug.html
+++ b/magtac.canvas.debug.html
@@ -94,19 +94,19 @@ html, body, div, span, object, iframe, h1, h2, p, a, img, ul, li, fieldset, form
 <script type="text/javascript" src="jslib/utilities.js"></script>
 <script type="text/javascript" src="jslib/aabbtree.js"></script>
 <script type="text/javascript" src="jslib/observer.js"></script>
-<script type="text/javascript" src="jslib/webgl/touchevent.js"></script>
 <script type="text/javascript" src="jslib/webgl/ddsloader.js"></script>
-<script type="text/javascript" src="jslib/webgl/touch.js"></script>
-<script type="text/javascript" src="jslib/webgl/sounddevice.js"></script>
-<script type="text/javascript" src="jslib/webgl/turbulenzengine.js"></script>
-<script type="text/javascript" src="jslib/webgl/networkdevice.js"></script>
-<script type="text/javascript" src="jslib/webgl/soundtarloader.js"></script>
-<script type="text/javascript" src="jslib/webgl/physicsdevice.js"></script>
 <script type="text/javascript" src="jslib/webgl/graphicsdevice.js"></script>
-<script type="text/javascript" src="jslib/webgl/mathdevice.js"></script>
-<script type="text/javascript" src="jslib/webgl/tgaloader.js"></script>
 <script type="text/javascript" src="jslib/webgl/inputdevice.js"></script>
+<script type="text/javascript" src="jslib/webgl/mathdevice.js"></script>
+<script type="text/javascript" src="jslib/webgl/networkdevice.js"></script>
+<script type="text/javascript" src="jslib/webgl/physicsdevice.js"></script>
+<script type="text/javascript" src="jslib/webgl/sounddevice.js"></script>
+<script type="text/javascript" src="jslib/webgl/soundtarloader.js"></script>
 <script type="text/javascript" src="jslib/webgl/tarloader.js"></script>
+<script type="text/javascript" src="jslib/webgl/tgaloader.js"></script>
+<script type="text/javascript" src="jslib/webgl/touch.js"></script>
+<script type="text/javascript" src="jslib/webgl/touchevent.js"></script>
+<script type="text/javascript" src="jslib/webgl/turbulenzengine.js"></script>
 <script type="text/javascript" src="jslib/camera.js"></script>
 <script type="text/javascript" src="jslib/floor.js"></script>
 <script type="text/javascript" src="jslib/mouseforces.js"></script>
@@ -122,6 +122,8 @@ html, body, div, span, object, iframe, h1, h2, p, a, img, ul, li, fieldset, form
 <script type="text/javascript" src="scripts/scene/gameobject.js"></script>
 <script type="text/javascript" src="scripts/scene/enum/type.js"></script>
 <script type="text/javascript" src="scripts/scene/dlist.js"></script>
+<script type="text/javascript" src="scripts/scene/character.js"></script>
+<script type="text/javascript" src="scripts/vb/cube.js"></script>
     <!-- end 'tz_include_js' variable -->
 
     <script type="text/javascript">
@@ -170,11 +172,12 @@ html, body, div, span, object, iframe, h1, h2, p, a, img, ul, li, fieldset, form
 /*global MouseForces: false */
 /*global TurbulenzServices: false */
 
-//console.log('eType', eType.reverse(eType.gameobject));
-
-var npc = new GameObject();
-
 TurbulenzEngine.onload = function onloadFn() {
+
+	var cube = new Cube();
+	console.log('Cube', cube.toString());
+	var c = new Character();
+	
     var errorCallback = function errorCallback(msg) {
         window.alert(msg);
     };
@@ -230,188 +233,13 @@ TurbulenzEngine.onload = function onloadFn() {
         diffuse: null
     });
 
-    /*jshint white: false*/
-    // Vertex buffer parameters for crate
-    var vertexbufferParameters = {
-        numVertices: 24,
-        attributes: ['FLOAT3', 'SHORT2'],
-        dynamic: false,
-        data: [
-            -0.5,
-            -0.5,
-            0.5,
-            0,
-            0,
-            0.5,
-            -0.5,
-            0.5,
-            1,
-            0,
-            0.5,
-            0.5,
-            0.5,
-            1,
-            1,
-            -0.5,
-            0.5,
-            0.5,
-            0,
-            1,
-            -0.5,
-            0.5,
-            0.5,
-            0,
-            0,
-            0.5,
-            0.5,
-            0.5,
-            1,
-            0,
-            0.5,
-            0.5,
-            -0.5,
-            1,
-            1,
-            -0.5,
-            0.5,
-            -0.5,
-            0,
-            1,
-            -0.5,
-            0.5,
-            -0.5,
-            1,
-            1,
-            0.5,
-            0.5,
-            -0.5,
-            0,
-            1,
-            0.5,
-            -0.5,
-            -0.5,
-            0,
-            0,
-            -0.5,
-            -0.5,
-            -0.5,
-            1,
-            0,
-            -0.5,
-            -0.5,
-            -0.5,
-            0,
-            0,
-            0.5,
-            -0.5,
-            -0.5,
-            1,
-            0,
-            0.5,
-            -0.5,
-            0.5,
-            1,
-            1,
-            -0.5,
-            -0.5,
-            0.5,
-            0,
-            1,
-            0.5,
-            -0.5,
-            0.5,
-            0,
-            0,
-            0.5,
-            -0.5,
-            -0.5,
-            1,
-            0,
-            0.5,
-            0.5,
-            -0.5,
-            1,
-            1,
-            0.5,
-            0.5,
-            0.5,
-            0,
-            1,
-            -0.5,
-            -0.5,
-            -0.5,
-            0,
-            0,
-            -0.5,
-            -0.5,
-            0.5,
-            1,
-            0,
-            -0.5,
-            0.5,
-            0.5,
-            1,
-            1,
-            -0.5,
-            0.5,
-            -0.5,
-            0,
-            1
-        ]
-    };
-
     /*jshint white: true*/
-    var vertexbuffer = graphicsDevice.createVertexBuffer(vertexbufferParameters);
+    var vertexbuffer = graphicsDevice.createVertexBuffer(cube.vertexBufferParameters);
 
     var semantics = graphicsDevice.createSemantics([graphicsDevice.SEMANTIC_POSITION, graphicsDevice.SEMANTIC_TEXCOORD]);
 
-    /*jshint white: false*/
-    var indexbufferParameters = {
-        numIndices: 36,
-        format: 'USHORT',
-        dynamic: false,
-        data: [
-            2,
-            0,
-            1,
-            3,
-            0,
-            2,
-            6,
-            4,
-            5,
-            7,
-            4,
-            6,
-            10,
-            8,
-            9,
-            11,
-            8,
-            10,
-            14,
-            12,
-            13,
-            15,
-            12,
-            14,
-            18,
-            16,
-            17,
-            19,
-            16,
-            18,
-            22,
-            20,
-            21,
-            23,
-            20,
-            22
-        ]
-    };
-
     /*jshint white: true*/
-    var indexbuffer = graphicsDevice.createIndexBuffer(indexbufferParameters);
+    var indexbuffer = graphicsDevice.createIndexBuffer(cube.indexBufferParameters);
 
     var primitive = graphicsDevice.PRIMITIVE_TRIANGLES;
     var numIndices = 36;
@@ -446,7 +274,7 @@ TurbulenzEngine.onload = function onloadFn() {
     var cursorSemantic = graphicsDevice.createSemantics([graphicsDevice.SEMANTIC_POSITION]);
 
     var clearColor = mathDevice.v4Build(0.95, 0.95, 1.0, 1.0);
-
+		
     //
     // Physics
     //
